--- a/home.html
+++ b/home.html
@@ -1,1 +1,7 @@
-Quick Slides
+html { 
+  background: url(background.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
