adding some style

--- a/home.html
+++ b/home.html
@@ -1,7 +1,26 @@
-html { 
-  background: url(background.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Full Screen Background Images with One Line of CSS | Tutorialzine Freebie</title>
+        <!-- The stylesheet -->
+        <link rel="stylesheet" href="styles.css" />
+        <!--[if lt IE 9]>
+          <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+        <div class="container">
+        <caption> Following web page contains quick and dirty slides. They are made more for convinience than presentation.
+        </caption>
+
+        <ul>
+            <li><a href="llvm-instruction-selection/main">LLVM instruction selection presentation</a></li>
+        </ul>
+        </div>
+        <footer>
+	        <h2><i>Image taken from:</i> unsplash.com</h2>
+            <a class="tzine" href="http://goyalankit.com/"><i>Copyright © 2014 <b>Ankit Goyal</b></i></a>
+        </footer>
+    </body>
+</html>
