--- a/llvm-instruction-selection/main/index.html
+++ b/llvm-instruction-selection/main/index.html
@@ -28,6 +28,10 @@
     <div id="impress">
     <div class='step' >
     
+<h4>Conversion from Instruction to MachineInstruction</h4>
+</div>
+      <div class='step' >
+    
 <h4>eraseFromParent()</h4>
 
 <p><code class='inline prettyprint'>llvm/lib/CodeGen/CodeGenPrepare.cpp</code></p>
