--- a/llvm-pragmas/main/index.html
+++ b/llvm-pragmas/main/index.html
@@ -114,6 +114,14 @@ Sema::ActOnPragmaUnused(
 <li>variable used but marked unused. </li>
 <li>Store information in a vector</li>
 </ol>
+</div>
+      <div class='step' >
+    
+<h3>References</h3>
+
+<ol>
+<li><code class='inline prettyprint'>http://llvm.org/devmtg/2013-04/pellegrini-slides.pdf</code></li>
+</ol>
 
       </div>
     <script src="js/impress.js"></script>
