--- a/home.html
+++ b/home.html
@@ -15,7 +15,8 @@
         </caption>
 
         <ol>
-            <li><a href="llvm-instruction-selection/main">LLVM instruction selection presentation</a></li>
+            <li><a href="llvm-instruction-selection/main/index.html">LLVM instruction selection presentation</a></li>
+            <li><a href="llvm-pragmas/main/index.html">LLVM pragmas</a></li>
         </ol>
         </div>
         <footer>
