--- a/home.html
+++ b/home.html
@@ -18,10 +18,19 @@
             <li><a href="llvm-instruction-selection/main/index.html">LLVM instruction selection presentation</a></li>
             <li><a href="llvm-pragmas/main/index.html">LLVM pragmas</a></li>
         </ol>
-        </div>
-        <footer>
+    </div>
+
+    <footer>
+    <!--Copyright © 2014 <b>Ankit Goyal</b>-->
+    <b>Credits:</b> <br/>
+    Slides made using <a href="https://github.com/egonSchiele/mdpress">mdpress</a><br/>
+    Deployed on <a href="http://heroku.com/">heroku</a><br/><br/>
+    <a href="http://goyalankit.com/"><i>Copyright © 2014 <b>Ankit Goyal</b></i></a>
+    
+    </footer>
+        <!--footer>
 	        <h2><i>Image taken from:</i> unsplash.com</h2>
             <a class="tzine" href="http://goyalankit.com/"><i>Copyright © 2014 <b>Ankit Goyal</b></i></a>
-        </footer>
+        </footer--!>
     </body>
 </html>
