--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Full Screen Background Images with One Line of CSS | Tutorialzine Freebie</title>
+        <title>Slides | ankitgoyal.me</title>
         <!-- The stylesheet -->
         <link rel="stylesheet" href="styles.css" />
         <!--[if lt IE 9]>
